--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <title>RRTD's World</title>
 
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9227360411511627"
+     crossorigin="anonymous"></script>
 
 <style>
 
@@ -85,5 +86,6 @@ height: 100px;
 </body>
 
 </html>
+
 
 
