--- a/AtomicHabits.html
+++ b/AtomicHabits.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9227360411511627"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <H1 style="text-align: center;">Atomic Habits</H1>
@@ -5329,4 +5330,5 @@ time with me by reading this book. Thank you.
 
 </div>
 </body>
+
 </html>
