--- a/Books.html
+++ b/Books.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9227360411511627"
+     crossorigin="anonymous"></script>
 <style>
 body{
 
@@ -77,4 +78,5 @@ align-items: center;
     
 
 </body>
+
 </html>
