--- a/TheAlchemist.html
+++ b/TheAlchemist.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9227360411511627"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div style="text-align: center;;">
@@ -3990,4 +3992,5 @@ Coelho is also a prominent speaker for humanitarian causes. In
 
 </div>
 </body>
+
 </html>
