--- a/adoptme.html
+++ b/adoptme.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9227360411511627"
+     crossorigin="anonymous"></script>
     <style>
 body{
 
@@ -109,4 +111,5 @@ background-size: cover;
 
 </div>
 </body>
+
 </html>
