--- a/brokhaven.html
+++ b/brokhaven.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9227360411511627"
+     crossorigin="anonymous"></script>
     <style>
 body{
 
@@ -116,4 +118,5 @@ Emotes and well-written text bring your character to life. Use /e commands to da
 
 </div>
 </body>
+
 </html>
