--- a/petsimulator.html
+++ b/petsimulator.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9227360411511627"
+     crossorigin="anonymous"></script>
     <style>
 body{
 
@@ -119,4 +121,5 @@ Know the value of each pet before trading. Use Pet Sim value websites or Discord
 
 </div>
 </body>
+
 </html>
